--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "format": "prettier --write \"src/\""
+    "format": "prettier --write \"src/\"",
+    "watch": "tsc --watch"
   },
   "files": [
     "/dist"
